--- a/step.yml
+++ b/step.yml
@@ -1,11 +1,11 @@
 
 title: |-
-  ng-jira-step
+  jira-move-task-step
 summary: |
-  This bitrise step creates a comment for merges and posts them in correct ticket.
+  This step update optional parameter and assign new status.
 description: |
-  This bitrise step creates a comment for merges and posts them in correct ticket.
-  Also it moves ticket from code review column to next one.
+    This step update optional parameter and assign new status.
+
 website: https://github.com/Siemian/bitrise-step-ng-jira-step
 source_code_url: https://github.com/Siemian/bitrise-step-ng-jira-step
 support_url: https://github.com/Siemian/bitrise-step-ng-jira-step/issues
@@ -43,13 +43,13 @@ inputs:
   - user:
     opts:
       title: "JIRA User"
-      summary: JIRA User
+      summary: admin
       description: |
-        User used to post comment
+        User with privelige to move tasks
       is_expand: true
       is_required: true
       value_options: []
-  - api_token:
+  - jira_user:
     opts:
       title: "JIRA API Token"
       summary: Token created for supplied user
@@ -59,48 +59,58 @@ inputs:
       is_expand: true
       is_required: true
       value_options: []
-  - host:
+  - jira_url:
     opts:
       title: "JIRA Host"
       summary: The host used to connect with JIRA API
       description: |
-        ex.: https://netguru.atlassian.net
+        ex.: https://[team].atlassian.net
       is_expand: true
       is_required: true
       value_options: []
-  - qa_transition_id:
+  - to_status:
     opts:
-      title: "JIRA QA transition ID"
-      summary: Correct transition id for switching ticket to qa.
+      title: "JIRA resulting status"
+      summary: Task will be assigned to that status. Should be correct and should exist. Case sencitive
       description: |
-        ex.: 111
+        ex.: Ready for QA
       is_expand: true
       is_required: true
       value_options: []    
-  - no_qa_transition_id:
+  - from_status:
     opts:
-      title: "JIRA NO QA transition ID"
-      summary: Correct transition id for switching ticket directly to done.
+      title: "JIRA starting status"
+      summary: Correct status if task. Only task with that status will be updated.
       description: |
-        ex.: 111
+        ex.: "Team Review"
       is_expand: true
       is_required: true
       value_options: []
-  - add_bitrise_public_download_url:
+  - jira_project_name:
     opts:
-      title: "Include public download url"
-      summary: Determines if public url for download should be included in comment
+      title: "Jira project tag"
+      summary: Short project tag 
       description: |
-        Boolean value ex.: true, default is true
+        ex. : BTTT
+      is_expand: true
+      is_required: true
+      value_options: []
+  - custom_jira_field:
+    opts:
+      title: " version field which will be updated"
+      summary: "set custom_jira_value to that field"
+      description: |
+        ex.: Build number
       is_expand: true
       is_required: false
       value_options: []
-  - extra_info_in_comment:
+  - custom_jira_value:
     opts:
-      title: "Message that will be included in jira comment"
-      summary: This string will be added at the end of default message.
+      title: " extra value"
+      summary: "that value will be inserted into custom_jira_field"
       description: |
-        ex.: You can download build from Fabric
+        ex.: 15
       is_expand: true
       is_required: false
       value_options: []
+
