--- a/bitrise.yml
+++ b/bitrise.yml
@@ -6,9 +6,9 @@ app:
   # An example secret param, define it (A_SECRET_PARAM) in .bitrise.secrets.yml
   - A_SECRET_PARAM: $A_SECRET_PARAM
   # If you want to share this step into a StepLib
-  - BITRISE_STEP_ID: ng-jira-step
+  - BITRISE_STEP_ID: jira-move-task-step
   - BITRISE_STEP_VERSION: "0.0.1"
-  - BITRISE_STEP_GIT_CLONE_URL: https://github.com/Siemian/bitrise-step-ng-jira-step
+  - BITRISE_STEP_GIT_CLONE_URL: https://github.com/frakc/jira-move-task
   - MY_STEPLIB_REPO_FORK_GIT_URL: $MY_STEPLIB_REPO_FORK_GIT_URL
 
 workflows:
