--- a/step.yml
+++ b/step.yml
@@ -43,6 +43,7 @@ inputs:
   - jira_user:
     opts:
       title: "JIRA User"
+      is_sensitive: true
       summary: admin
       description: |
         User with privelige to move tasks
@@ -57,6 +58,7 @@ inputs:
         API token is used to authenticate with JIRA API. 
         It can be created here: https://id.atlassian.com/manage/api-tokens?_ga=2.43946604.875494627.1562923837-75487430.1434788493
       is_expand: true
+      is_sensitive: true
       is_required: true
       value_options: []
   - jira_url:
