--- a/step.yml
+++ b/step.yml
@@ -29,9 +29,11 @@ deps:
   brew:
   - name: git
   - name: wget
+  - name: jq
   apt_get:
   - name: git
   - name: wget
+  - name: jq
 
 
 toolkit:
